welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: identifier expected but integer literal found.
  for (i <- 0 to nums[nums.length -1]) {
                                   ^indexOfValue:8: error: ']' expected but '}' found.
} 
^