welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var reponse:Int = 0
  for (i <- 0 to nums[nums.length -1]) {
    if (nums[i] == lookingFor) {reponse = i}
    else {reponse = -1}
  return reponse
	}
}